--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
   "mssql.saveAsCsv.delimiter": ";",
   // "dotnet-test-explorer.testProjectPath": "/tests/meta-test/meta-test.csproj",
   "pathToCwd": "${workspaceFolder}/src/",
-  "pathToCsproj": "${workspaceFolder}/src/_meta.csproj",
-  "pathToDll": "${workspaceFolder}/src/bin/Debug/net7.0/_meta.dll"
-
+  "pathToCsproj": "${workspaceFolder}/src/file-type-converter.csproj",
+  "pathToDll": "${workspaceFolder}/src/bin/Debug/net7.0/file-type-converter.dll"
 }
