--- a/src/file-type-converter.csproj
+++ b/src/file-type-converter.csproj
@@ -1,20 +1,37 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <langVersion>11</langVersion>
-
+    <FileVersion>0.9</FileVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <FileVersion>0.1</FileVersion>
-    <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
-
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <SatelliteResourceLanguages>de</SatelliteResourceLanguages>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.0" />
+    <PackageReference Include="Hl7.Fhir.R4" Version="4.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PgpCore" Version="5.8.1" />
+    <PackageReference Include="Saxon-HE" Version="10.8.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../dexters-labor/src/dexters-labor.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include=".config/*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <!-- Activate this group to create xml comments on build (file is meh) -->
   <!-- <PropertyGroup>
