--- a/.gitignore
+++ b/.gitignore
@@ -362,8 +362,8 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# Files 
-src/App/temp/**/*.*
+# Files in temp
+**/temp/**/*.*
 
 # local config
 **/.config/**/*.*
