--- a/src/file-type-converter.csproj
+++ b/src/file-type-converter.csproj
@@ -30,7 +30,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include=".config/*.*">
+    <Content Include="**/.config/*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="**/.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
