--- a/src/settings.config
+++ b/src/settings.config
@@ -3,3 +3,4 @@
     <add key="server_prod" value="zfkdsql01.rki.local" />
     <add key="server_test" value="abt2sqldev02.rki.local" />
 </appSettings>
+<!-- cp this file to .config/ ? -->
