included support for sql schema on ddl generation

--- a/src/file-type-converter.csproj
+++ b/src/file-type-converter.csproj
@@ -6,7 +6,7 @@
     <!-- <langVersion>11</langVersion> -->
 
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <!-- <Nullable>enable</Nullable> -->
 
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
